tests/baselines/reference/unusedClassesinNamespace2.errors.txt
tests/cases/compiler/unusedClassesinNamespace2.ts(3,11): error TS6133: 'c1' is declared but never used.


==== tests/cases/compiler/unusedClassesinNamespace2.ts (1 errors) ====
    
    namespace Validation {
        class c1 {
              ~~
!!! error TS6133: 'c1' is declared but never used.
    
        }
    
        export class c2 {
    
        }
    }